--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.0",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.1",
